# play-with-elasticsearch-redis

./: .gitignore  Makefile  README.md  config  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/context_providers/: base_context_provider.py
app/llm/: basic_llm.py
app/orchestractor/: base.py
app/orchestrator/: base.py
app/services/: s1.py  s2.py
app/utils/: config.py
playground/: faiss_test.py  lg.py  play.py  sbert.py  test.py  test_cases.json  test_results.json
tests/: conftest.py  test_async_providers.py  test_orchestrator.py  test_s1.py  test_s2.py
