[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["wangyilong"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
elasticsearch = "^8.17.0"
redis = "^5.2.1"
pydantic-settings = "^2.7.1"
openai = "^1.61.0"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
